--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </svg>
 
             <h2>Oh nee... 💔</h2>
-            <p style="color: #ec407a; font-style: italic;">Nu is mijn hart is gebroken :/</p>
+            <p style="color: #ec407a; font-style: italic;">Nu is mijn hart gebroken :/</p>
 
             <button class="btn-try" onclick="showPage('questionPage')">Probeer opnieuw ❤️</button>
 
@@ -116,7 +116,7 @@
 
             <div style="background: white; border-radius: 30px; padding: 2rem; box-shadow: 0 15px 35px rgba(0,0,0,0.2); border: 4px solid #f8bbd0; max-width: 600px; margin: 0 auto;">
                 <p style="font-size: 1.5rem; color: #c2185b; font-style: italic;">
-                    "Net als deze bloemen, ben jij mooi, uniek en speciaal. Al deze lieve woorden beschrijven jou perfect!"
+                    Net als deze bloemen, ben jij mooi, uniek en speciaal. Al deze lieve woorden beschrijven jou perfect!
                 </p>
             </div>
         </div>
